[package]
name = "bupt-net-login"
version = "0.1.1"
edition = "2021"
description = "A simple tool to login BUPT net using student ID and password."
readme = "README.md"
repository = "https://github.com/YouXam/bupt-net-login"
license = "MIT"
license-file = "LICENSE"
keywords = ["bupt", "net", "login", "cli"]
categories = ["command-line-utilities"]
authors = [
    "YouXam"
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
async-recursion = "1.1.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
dirs-next = "2.0.0"
openssl = { version = "0.10.70", features = ["vendored"] }
reqwest = { version = "0.12.3", features = ["json", "cookies"]}
rpassword = "7.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"

