[package]
name = "bupt-net-login"
version = "0.1.2"
edition = "2021"
description = "A simple tool to login BUPT net using student ID and password."
readme = "README.md"
repository = "https://github.com/YouXam/bupt-net-login"
license-file = "../LICENSE"
keywords = ["bupt", "net", "login", "cli"]
categories = ["command-line-utilities"]
authors = [
    "YouXam"
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
async-recursion = "1.1.1"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
dirs-next = "2.0.0"
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
minreq = { version = "2.13.4" }
url = "2.5.4"
serde_urlencoded = "0.7.1"

